package nl.qhoekman.solidfile.entities;

import java.util.List;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.OneToMany;
import jakarta.persistence.Table;

@Entity
@Table(name = "users")
public class User {
  @Id
  @GeneratedValue(strategy = GenerationType.IDENTITY)
  private Long id;
  @Column(name = "external_user_id")
  private String externalUserId;
  @OneToMany(mappedBy = "user")
  private List<File> files;

  @OneToMany(mappedBy = "user")
  private List<Folder> folders;
}
